--- a/haute_holidays_2.html
+++ b/haute_holidays_2.html
@@ -5,120 +5,127 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  margin: 0;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-
-#navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-#navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-#navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.content {
-  padding: 16px;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
-}
-</style>
 </head>
 
 <body>
-  <div
+<div
   id="navbar"
   class="topnav">
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="#home">LOGO</a>
+      <div class="topnav-right">
     <a href="#about">ABOUT</a>
-    <a href="#market">HOLIDAY MARKET EVENT</a>
-    <a href="#privateevents">PRIAVTE EVENTS</a>
+    <a href="#market">HOLIDAY MARKET</a>
+    <a href="#privateevents">PRIVATE EVENTS</a>
     <a href="#workshops">WORKSHOPS</a>
     <a href="#freshdecor">FRESH DECOR</a>
     <a href="#subscribe">SUBSCRIPTION BOXES</a>
     <a href="#contact">CONTACT</a>
-
+      </div>
   </div>
 
+  <style>
+  body {
+    margin: 0;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .header {
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align: center;
+  }
+
+  #navbar {
+    overflow: hidden;
+    background-color: #000000;
+  }
+
+  #navbar a {
+    float: left;
+    display: block;
+    color: #ffffff;
+    text-align: right;
+    padding: 18px 18px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+
+  #navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  #navbar a.active {
+    background-color: #ffffff;
+    color: #000000;
+  }
+
+.topnav-right {float: right;}
+
+  .content {
+    padding: 16px;
+  }
+
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+
+  .sticky + .content {
+    padding-top: 60px;
+  }
+  </style>
 
 <h1 style="color:#137347">Haute Holidays</h1>
 
+<div id="home">
+  LOGO
+
+</div>
 
 <div id="about">
-  ABOUT
+  <h2>ABOUT</h2>
 
 </div>
 
 <div id="market">
-  HOLIDAY MARKET
+  <h2>HOLIDAY MARKET</h2>
+      Made with love for those you love.
+
 
 </div>
 
 <div id="privateevents">
-  PRIVATE EVENTS
-
-
-
+  <h2>PRIVATE EVENTS</h2>
+  <h3>Event Planning &amp; Event Design</h3>
 
 </div>
 
 <div id="workshops">
-  WORKSHOPS
+  <h2>WORKSHOPS</h2>
 
 
 
 </div>
 
 <div id="freshdecor">
-  FRESH DECOR
+  <h2>FRESH DECOR</h2>
 
 
 </div>
 
 <div id="subscribe">
-  SUBSCRIPTION BOXES
-
+  <h2>SUBSCRIPTION BOXES</h2>
+      Keep those evergreen scents fresh all season long.
 
 
 </div>
 
 <div id="contact">
-  CONTACT
-    <br>Haute House Studio
+  <h2>CONTACT</h2>
+        Haute House Studio
     <br>5500 Lincoln Drive
     <br>Suite 150
     <br>Edina, MN 55436
