--- a/haute_holidays_2.html
+++ b/haute_holidays_2.html
@@ -87,39 +87,57 @@
 
 <div id="about">
   <h2>ABOUT</h2>
+      Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
+      a floral, design, and event planning boutique in Edina, MN. Learn more about us and see what
+      we can do below.
+
+TEAM / VALUES / HISTORY / HOME SITE
 
 </div>
 
 <div id="market">
   <h2>HOLIDAY MARKET</h2>
-      Made with love for those you love.
+      Local gifts made with love
+      for those you love.
 
+LEARN MORE
 
 </div>
 
 <div id="privateevents">
   <h2>PRIVATE EVENTS</h2>
   <h3>Event Planning &amp; Event Design</h3>
+        Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.
+        Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.
+
+EVENTS
 
 </div>
 
 <div id="workshops">
   <h2>WORKSHOPS</h2>
+      Bring out your creative side in weekly workshops led by our nationally-recognized designers.
+      Learn floral design and upkeep, entertaining tips, and more.
+      Share the joy and an invite a friend!
 
-
+ WORKSHOPS / REGISTER
 
 </div>
 
 <div id="freshdecor">
   <h2>FRESH DECOR</h2>
+      Centerpieces, mantels, and tree decor curated specially for your space.
+      Or, spread the cheer and show gratitude to someone you love.
 
+ORDER
 
 </div>
 
 <div id="subscribe">
   <h2>SUBSCRIPTION BOXES</h2>
-      Keep those evergreen scents fresh all season long.
+      Keep your home full of warm cinnamon and evergreen scents all season long.
 
+SUBSCRIPTION PLANS
 
 </div>
 
