added secondary pages

--- a/haute_holidays_2.html
+++ b/haute_holidays_2.html
@@ -76,6 +76,9 @@
   .sticky + .content {
     padding-top: 60px;
   }
+
+
+
   </style>
 
 <h1 style="color:#137347">Haute Holidays</h1>
@@ -91,7 +94,7 @@
       a floral, design, and event planning boutique in Edina, MN. Learn more about us and see what
       we can do below.
 
-TEAM / VALUES / HISTORY / HOME SITE
+TEAM / VALUES &amp; HISTORY / HOME SITE
 
 </div>
 
@@ -138,6 +141,7 @@ ORDER
       Keep your home full of warm cinnamon and evergreen scents all season long.
 
 SUBSCRIPTION PLANS
+<button class="btn subscribe">SUBSCRIPTION PLANS</button>
 
 </div>
 
@@ -148,7 +152,7 @@ SUBSCRIPTION PLANS
     <br>Suite 150
     <br>Edina, MN 55436
     <br>
-    <br>hello@hautehousestudio.com
+    <br>< a href="mailto:hello@hautehousestudio.com"> hello@hautehousestudio.com </a>
     <br>
     <br>(612) 730-1143
 </div>
