made navbar fixed

--- a/3_events.html
+++ b/3_events.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>HAUTE HOLIDAYS by Haute House Studio </title>
+  <title>EVENTS - HAUTE HOLIDAYS</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
