--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -7,6 +7,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+
+<style>
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #000000;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: #ffffff;
+  text-align: right;
+  padding: 18px 18px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+#navbar a:hover {
+  background-color: #edeae6;
+  color: black;
+}
+
+#navbar a.active {
+  background-color: #d6d7d6;
+  color: black;
+}
+
+.topnav-right {float: right;}
+</style>
+
+
 <body>
 <div
   id="navbar"
@@ -22,64 +68,6 @@
     <a href="#contact">CONTACT</a>
       </div>
   </div>
-
-  <style>
-  body {
-    margin: 0;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-  .header {
-    background-color: #f1f1f1;
-    padding: 30px;
-    text-align: center;
-  }
-
-  #navbar {
-    overflow: hidden;
-    background-color: #000000;
-  }
-
-  #navbar a {
-    float: left;
-    display: block;
-    color: #ffffff;
-    text-align: right;
-    padding: 18px 18px;
-    text-decoration: none;
-    font-size: 16px;
-  }
-
-  #navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-
-  #navbar a.active {
-    background-color: #ffffff;
-    color: #000000;
-  }
-
-.topnav-right {float: right;}
-
-  .content {
-    padding: 16px;
-  }
-
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
-
-  .sticky + .content {
-    padding-top: 60px;
-  }
-
-
-
-  </style>
 
 <h1 style="color:#137347">Haute Holidays</h1>
 
