figuring out links

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ ORDER
       Keep your home full of warm cinnamon and evergreen scents all season long.
 
 SUBSCRIPTION PLANS
-<button onclick="6_subscribe.html">SUBSCRIPTION PLANS</button>
+<button onclick="https://6_subscribe.html">SUBSCRIPTION PLANS</button>
 
 </div>
 
