--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -6,8 +6,20 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
-
+<style>
+   .button {
+   background-color: white;
+   border: 1px;
+   color: black;
+   padding: 20px 34px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   margin: 4px 2px;
+   cursor: pointer;
+   }
+</style>
 <style>
 body {
   margin: 0;
@@ -50,6 +62,25 @@ body {
 }
 
 .topnav-right {float: right;}
+
+.button {
+background-color: white;
+border: 2px solid black;
+color: black;
+padding: 16px 16px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 18px;
+margin: 2px 2px;
+cursor: pointer;
+}
+
+.button:hover {
+  background-color: black;
+  color: white
+}
+
 </style>
 
 
@@ -82,8 +113,9 @@ body {
       a floral, design, and event planning boutique in Edina, MN. Learn more about us and see what
       we can do below.
 
-TEAM / VALUES &amp; HISTORY / HOME SITE
-
+ <br><a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM</a>
+ <a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
+ <a href="https://hautehousestudio.com" class="button">HOME SITE</a>
 </div>
 
 <div id="market">
@@ -91,7 +123,7 @@ TEAM / VALUES &amp; HISTORY / HOME SITE
       Local gifts made with love
       for those you love.
 
-LEARN MORE
+ <br><a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">LEARN MORE!</a>
 
 </div>
 
@@ -101,7 +133,7 @@ LEARN MORE
         Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.
         Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.
 
-EVENTS
+ <br><a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
 
 </div>
 
@@ -111,7 +143,8 @@ EVENTS
       Learn floral design and upkeep, entertaining tips, and more.
       Share the joy and an invite a friend!
 
- WORKSHOPS / REGISTER
+ <br><a href="https://kehanson14.github.io/Haute_Holidays/4_workshops.html" class="button">WORKSHOPS</a>
+    <a href="https://www.eventbrite.com/o/haute-house-studio-18522634139" class="button">REGISTER!</a>
 
 </div>
 
@@ -120,7 +153,8 @@ EVENTS
       Centerpieces, mantels, and tree decor curated specially for your space.
       Or, spread the cheer and show gratitude to someone you love.
 
-ORDER
+
+<br><a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
 
 </div>
 
@@ -128,8 +162,7 @@ ORDER
   <h2>SUBSCRIPTION BOXES</h2>
       Keep your home full of warm cinnamon and evergreen scents all season long.
 
-SUBSCRIPTION PLANS
-<button onclick="6_subscribe.html">SUBSCRIPTION PLANS</button>
+<br><a href="https://kehanson14.github.io/Haute_Holidays/6_subscribe.html" class="button">SUBSCRIPTION PLANS</a>
 
 </div>
 
