--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -3,86 +3,8 @@
 <head>
   <title>HAUTE HOLIDAYS by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<style>
-   .button {
-   background-color: white;
-   border: 1px;
-   color: black;
-   padding: 20px 34px;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 16px;
-   margin: 4px 2px;
-   cursor: pointer;
-   }
-</style>
-<style>
-body {
-  margin: 0;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-
-#navbar {
-  overflow: hidden;
-  background-color: #000000;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-#navbar a {
-  float: left;
-  display: block;
-  color: #ffffff;
-  text-align: right;
-  padding: 18px 18px;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-#navbar a:hover {
-  background-color: #edeae6;
-  color: black;
-}
-
-#navbar a.active {
-  background-color: #d6d7d6;
-  color: black;
-}
-
-.topnav-right {float: right;}
-
-.button {
-background-color: white;
-border: 2px solid black;
-color: black;
-padding: 16px 16px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 18px;
-margin: 2px 2px;
-cursor: pointer;
-}
-
-.button:hover {
-  background-color: black;
-  color: white
-}
-
-</style>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
 <div
@@ -173,7 +95,7 @@ cursor: pointer;
     <br>Suite 150
     <br>Edina, MN 55436
     <br>
-    <br>< a href="mailto:hello@hautehousestudio.com"> hello@hautehousestudio.com </a>
+    <br><a href="mailto:hello@hautehousestudio.com" style="color:black;"> hello@hautehousestudio.com</a>
     <br>
     <br>(612) 730-1143
 </div>
