--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -3,6 +3,7 @@
 <head>
   <title>HAUTE HOLIDAYS by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,76 +30,111 @@
 
 </div>
 
-<div id="about">
-  <h2>ABOUT</h2>
-      Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
-      a floral, design, and event planning boutique in Edina, MN. Learn more about us and see what
-      we can do below.
 
- <br><a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM</a>
- <a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
- <a href="https://hautehousestudio.com" class="button">HOME SITE</a>
+<div id="about">
+  <div class="w3-container">
+    <h2>ABOUT</h2>
+      <div class="leftcolumn">
+        <p>Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
+        a floral, design, and event planning boutique in Edina, MN.</p>
+        <p>Learn more about us and see what we can do below.</p>
+      </div>
+
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM</a>
+        <br><a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
+        <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
+      </div>
+    </div>
 </div>
+
 
 <div id="market">
-  <h2>HOLIDAY MARKET</h2>
-      Local gifts made with love
-      for those you love.
+  <div class="w3-container">
+    <h2>HOLIDAY MARKET</h2>
+      <div class="leftcolumn">
+          <p>Local gifts made with love
+          <br>for those you love.</p>
+          <br><p>In-studio and online throughout December.</p>
+      </div>
 
- <br><a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">LEARN MORE!</a>
-
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">LEARN MORE!</a>
+      </div>
+    </div>
 </div>
+
 
 <div id="privateevents">
-  <h2>PRIVATE EVENTS</h2>
-  <h3>Event Planning &amp; Event Design</h3>
-        Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.
-        Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.
+  <div class="w3-container">
+    <h2>PRIVATE EVENTS</h2>
+      <h3>Event Planning &amp; Event Design</h3>
+        <div class="leftcolumn">
+          <p>Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.</p>
+          <p>Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.</p>
+        </div>
 
- <br><a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
-
+        <div class="rightcolumn">
+          <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
+        </div>
+  </div>
 </div>
+
 
 <div id="workshops">
-  <h2>WORKSHOPS</h2>
-      Bring out your creative side in weekly workshops led by our nationally-recognized designers.
-      Learn floral design and upkeep, entertaining tips, and more.
-      Share the joy and an invite a friend!
+  <div class="w3-container">
+    <h2>WORKSHOPS</h2>
+      <div class="leftcolumn">
+        <p>Bring out your creative side in weekly workshops led by our nationally-recognized designers.
+        <br>Learn floral design and upkeep, entertaining tips, and more.</p>
+        <p>Share the joy and an invite a friend!</p>
+      </div>
 
- <br><a href="https://kehanson14.github.io/Haute_Holidays/4_workshops.html" class="button">WORKSHOPS</a>
-    <a href="https://www.eventbrite.com/o/haute-house-studio-18522634139" class="button">REGISTER!</a>
-
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/4_workshops.html" class="button">WORKSHOPS</a>
+        <br><a href="https://www.eventbrite.com/o/haute-house-studio-18522634139" class="button">REGISTER!</a>
+      </div>
+  </div>
 </div>
 
+
 <div id="freshdecor">
-  <h2>FRESH DECOR</h2>
-      Centerpieces, mantels, and tree decor curated specially for your space.
-      Or, spread the cheer and show gratitude to someone you love.
+  <div class="w3-container">
+    <h2>FRESH DECOR</h2>
+      <div class="leftcolumn">
+        <p>Centerpieces, mantels, and tree decor curated specially for your space.
+        Or, spread the cheer and show gratitude to someone you love.</p>
+      </div>
 
-
-<br><a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
-
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
+      </div>
+  </div>
 </div>
 
 <div id="subscribe">
-  <h2>SUBSCRIPTION BOXES</h2>
-      Keep your home full of warm cinnamon and evergreen scents all season long.
-
-<br><a href="https://kehanson14.github.io/Haute_Holidays/6_subscribe.html" class="button">SUBSCRIPTION PLANS</a>
-
+  <div class="w3-container">
+    <h2>SUBSCRIPTION BOXES</h2>
+      <p>Keep your home full of warm cinnamon and evergreen scents all season long.</p>
+      <br><a href="https://kehanson14.github.io/Haute_Holidays/6_subscribe.html" class="button">SUBSCRIPTION PLANS</a>
+  <div class="w3-container">
 </div>
 
-<div id="contact">
-  <h2>CONTACT</h2>
-        Haute House Studio
-    <br>5500 Lincoln Drive
-    <br>Suite 150
-    <br>Edina, MN 55436
-    <br>
-    <br><a href="mailto:hello@hautehousestudio.com" style="color:black;"> hello@hautehousestudio.com</a>
-    <br>
-    <br>(612) 730-1143
+<br>
+<br>
+<br>
+
+<div class="footer">
+  <div class="w3-container">
+    <h2>CONTACT</h2>
+        <p>Haute House Studio
+        <br>5500 Lincoln Drive, Suite 150, Edina, MN 55436</p>
+        <br>
+        <br><a href="mailto:hello@hautehousestudio.com" style="color:black;"> hello@hautehousestudio.com</a>
+        <br>(612) 730-1143
+  </div>
 </div>
+
 
 </body>
 </html>
