changed column sizes
no br in abt section, updated subscribe page

--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -42,7 +42,7 @@
 
       <div class="rightcolumn">
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM</a>
-        <br><a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
         <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
       </div>
     </div>
