--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -23,10 +23,44 @@
       </div>
   </div>
 
-<h1 style="color:#137347">Haute Holidays</h1>
+
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
+  height: 70%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0,0,0, 0.3);
+  padding: 50px 50px;
+}
+</style>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
+    <h2>by
+        <br>Haute House Studio</h2>
+  </div>
+</div>
 
 <div id="home">
-  LOGO
 
 </div>
 
@@ -53,9 +87,10 @@
   <div class="w3-container">
     <h2>HOLIDAY MARKET</h2>
       <div class="leftcolumn">
-          <p>Local gifts made with love
-          <br>for those you love.</p>
-          <br><p>In-studio and online throughout December.</p>
+          <h3><p>Local gifts
+          <br>made with love
+          <br>for those you love.</p></h3>
+          <p>In-studio and online throughout December.</p>
       </div>
 
       <div class="rightcolumn">
@@ -125,12 +160,11 @@
 <br>
 
 <div class="footer">
-    <h2>CONTACT</h2>
-        <p>Haute House Studio
-        <br>5500 Lincoln Drive, Suite 150, Edina, MN 55436</p>
-        <br>
-        <br><a href="mailto:hello@hautehousestudio.com" style="color:black;"> hello@hautehousestudio.com</a>
+    <h3>HAUTE HOUSE STUDIO</h3>
+        <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
+        <br>5500 Lincoln Drive, Suite 150
+        <br>Edina, MN 55436
 </div>
 
 
