--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -16,9 +16,7 @@
     <a href="#about">ABOUT</a>
     <a href="#market">HOLIDAY MARKET</a>
     <a href="#privateevents">PRIVATE EVENTS</a>
-    <a href="#workshops">WORKSHOPS</a>
     <a href="#freshdecor">FRESH DECOR</a>
-    <a href="#subscribe">SUBSCRIPTION BOXES</a>
     <a href="#contact">CONTACT</a>
       </div>
   </div>
@@ -75,8 +73,7 @@ body, html {
       </div>
 
       <div class="rightcolumn">
-        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM</a>
-        <a href="https://kehanson14.github.io/Haute_Holidays/1-2_historyandvalues.html" class="button">VALUES &amp; HISTORY</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">YOUR TEAM / VALUES / HISTORY</a>
         <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
       </div>
     </div>
@@ -116,21 +113,6 @@ body, html {
 </div>
 
 
-<div id="workshops">
-  <div class="w3-container">
-    <h2>WORKSHOPS</h2>
-      <div class="leftcolumn">
-        <p>Bring out your creative side in weekly workshops led by our nationally-recognized designers.
-        <br>Learn floral design and upkeep, entertaining tips, and more.</p>
-        <p>Share the joy and an invite a friend!</p>
-      </div>
-
-      <div class="rightcolumn">
-        <a href="https://kehanson14.github.io/Haute_Holidays/4_workshops.html" class="button">WORKSHOPS</a>
-        <br><a href="https://www.eventbrite.com/o/haute-house-studio-18522634139" class="button">REGISTER!</a>
-      </div>
-  </div>
-</div>
 
 
 <div id="freshdecor">
@@ -147,13 +129,6 @@ body, html {
   </div>
 </div>
 
-<div id="subscribe">
-  <div class="w3-container">
-    <h2>SUBSCRIPTION BOXES</h2>
-      <p>Keep your home full of warm cinnamon and evergreen scents all season long.</p>
-      <br><a href="https://kehanson14.github.io/Haute_Holidays/6_subscribe.html" class="button">SUBSCRIPTION PLANS</a>
-  <div class="w3-container">
-</div>
 
 <br>
 <br>
