update index and css
changed navbar links.
added new h1.
columns in footer.
got rid of active color in nav bar.
header height.
center aligned h3.
added image to folder.

--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -11,13 +11,13 @@
 <div
   id="navbar"
   class="topnav">
-    <a class="active" href="#home">LOGO</a>
+    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">LOGO</a>
       <div class="topnav-right">
-    <a href="#about">ABOUT</a>
-    <a href="#market">HOLIDAY MARKET</a>
-    <a href="#privateevents">PRIVATE EVENTS</a>
-    <a href="#freshdecor">FRESH DECOR</a>
-    <a href="#contact">CONTACT</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html">ABOUT</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html">HOLIDAY MARKET</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html">PRIVATE EVENTS</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html">FRESH DECOR</a>
+    <a href="https://www.hautehousestudio.com/contact">CONTACT</a>
       </div>
   </div>
 
@@ -58,12 +58,11 @@ body, html {
   </div>
 </div>
 
-<div id="home">
-
+<div>
+<h1> inspire. celebrate. create.
 </div>
 
 
-<div id="about">
   <div class="w3-container">
     <h2>ABOUT</h2>
       <div class="leftcolumn">
@@ -77,30 +76,24 @@ body, html {
         <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
       </div>
     </div>
-</div>
 
 
-<div id="market">
   <div class="w3-container">
-    <h2>HOLIDAY MARKET</h2>
+    <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
       <div class="leftcolumn">
-          <h3><p>Local gifts
-          <br>made with love
-          <br>for those you love.</p></h3>
+      <h3><p>Local gifts made with love for those you love.</p></h3>
           <p>In-studio and online throughout December.</p>
       </div>
 
       <div class="rightcolumn">
-        <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">LEARN MORE!</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
       </div>
     </div>
-</div>
 
 
-<div id="privateevents">
   <div class="w3-container">
     <h2>PRIVATE EVENTS</h2>
-      <h3>Event Planning &amp; Event Design</h3>
+      <h3>Event Planning, Event Design &amp; Team-building Workshops</h3>
         <div class="leftcolumn">
           <p>Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.</p>
           <p>Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.</p>
@@ -110,12 +103,8 @@ body, html {
           <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
         </div>
   </div>
-</div>
 
 
-
-
-<div id="freshdecor">
   <div class="w3-container">
     <h2>FRESH DECOR</h2>
       <div class="leftcolumn">
@@ -127,7 +116,7 @@ body, html {
         <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
       </div>
   </div>
-</div>
+
 
 
 <br>
@@ -135,12 +124,19 @@ body, html {
 <br>
 
 <div class="footer">
-    <h3>HAUTE HOUSE STUDIO</h3>
+<h3>HAUTE HOUSE STUDIO</h3>
+  <div class="row">
+    <div class="column">
         <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
-        <br>5500 Lincoln Drive, Suite 150
+        <br> Hours by appointment
+    </div>
+    <div class="column">
+        5500 Lincoln Drive
+        <br>Suite 150
         <br>Edina, MN 55436
-</div>
+    </div>
+</div></div></div>
 
 
 </body>
