photos and fonts

--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -28,8 +28,11 @@
 body, html {
   height: 100%;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+
 }
+
+h1 {font-family: Georgia, serif;}
+h2 {font-family: Georgia, serif;}
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
@@ -54,8 +57,8 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
-    <h2>by
+    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
+    <h2 style="font-family: Arial, Helvetica, sans-serif;">by
         <br>Haute House Studio</h2>
   </div>
 </div>
@@ -64,6 +67,7 @@ body, html {
 <h1> inspire. celebrate. create.
 </div>
 
+<br>
 
   <div class="w3-container">
     <h2>ABOUT</h2>
@@ -79,6 +83,8 @@ body, html {
       </div>
     </div>
 
+<br>
+<br>
 
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
@@ -91,6 +97,9 @@ body, html {
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
       </div>
     </div>
+
+<br>
+<br>
 
 <div class="row">
   <div class="imgcolumn">
@@ -105,6 +114,9 @@ body, html {
 </div>
 </div>
 
+<br>
+<br>
+
   <div class="w3-container">
     <h2>PRIVATE EVENTS</h2>
       <h3>Event Planning, Event Design &amp; Team-building Workshops</h3>
@@ -118,11 +130,26 @@ body, html {
         </div>
   </div>
 
+  <div class="row">
+    <div class="imgcolumn">
+      <img src="whiteplates.jpg" alt="dining event" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="eventdark.jpg" alt="classy event" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="grazetray.jpg" alt="graze tray" style="width:100%">
+    </div>
+  </div>
+  </div>
+
+<br>
+<br>
 
   <div class="w3-container">
     <h2>FRESH DECOR</h2>
       <div class="leftcolumn">
-        <p>Centerpieces, mantels, and tree decor curated specially for your space.
+        <p>Centerpieces, mantels, tree decor, and more curated specially for your space.
         Or, spread the cheer and show gratitude to someone you love.</p>
       </div>
 
@@ -131,7 +158,18 @@ body, html {
       </div>
   </div>
 
-
+  <div class="row">
+    <div class="imgcolumn">
+      <img src="candlepine.jpg" alt="christmas candles" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="freshdecor.png" alt="christmas tree" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="wreath.jpg" alt="pine wreath" style="width:100%">
+    </div>
+  </div>
+  </div>
 
 <br>
 <br>
