--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -4,31 +4,27 @@
   <title>HAUTE HOLIDAYS by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
 <div
   id="navbar"
-  class="myTopnav">
-    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">LOGO</a>
+  class="topnav">
+    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
       <div class="topnav-right">
     <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
     <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
- <i class="fa fa-bars"></i>
-</a></div>
-  </div>
+      </div>
+</div>
 
 <style>
 body, html {
   height: 100%;
   margin: 0;
-
 }
 
 h1 {font-family: Georgia, serif;}
@@ -75,11 +71,25 @@ h2 {font-family: Georgia, serif;}
         <p>Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
         a floral, design, and event planning boutique in Edina, MN.</p>
         <p>Learn more about us and see what we can do below.</p>
+        <br>
       </div>
 
       <div class="rightcolumn">
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">TEAM / VALUES / HISTORY</a>
         <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
+      <br>
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="imgcolumn">
+        <img src="sequins2.jpg" alt="sequins" style="width:100%">
+      </div>
+      <div class="imgcolumn">
+        <img src="joy.jpg" alt="joy decoration" style="width:100%">
+      </div>
+      <div class="imgcolumn">
+        <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
       </div>
     </div>
 
@@ -89,11 +99,12 @@ h2 {font-family: Georgia, serif;}
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
 
-       <div class="leftcolumn"<h3>Local gifts made with love for those you love.</h3>
+       <div class="leftcolumn"><h3>Local gifts made with love for those you love.</h3>
           <p>In-studio and online throughout December.</p>
       </div>
 
       <div class="rightcolumn">
+        <br>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
       </div>
     </div>
@@ -103,13 +114,13 @@ h2 {font-family: Georgia, serif;}
 
 <div class="row">
   <div class="imgcolumn">
-    <img src="sharingpresents.jpg" alt="giving gifts" style="width:100%">
+    <img src="blackcandle.jpg" alt="black candle" style="width:100%">
   </div>
   <div class="imgcolumn">
-    <img src="sharingpresents.jpg" alt="Forest" style="width:100%">
+    <img src="hotred.jpg" alt="holdingpresents" style="width:100%">
   </div>
   <div class="imgcolumn">
-    <img src="sharingpresents.jpg" alt="Mountains" style="width:100%">
+    <img src="ideashouse.jpg" alt="blankets and pinecones" style="width:100%">
   </div>
 </div>
 </div>
@@ -126,6 +137,7 @@ h2 {font-family: Georgia, serif;}
         </div>
 
         <div class="rightcolumn">
+          <br>
           <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
         </div>
   </div>
@@ -151,11 +163,12 @@ h2 {font-family: Georgia, serif;}
       <div class="leftcolumn">
         <p>Centerpieces, mantels, tree decor, and more curated specially for your space.
         Or, spread the cheer and show gratitude to someone you love.</p>
+
       </div>
 
       <div class="rightcolumn">
         <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
-      </div>
+    </div>
   </div>
 
   <div class="row">
@@ -190,16 +203,6 @@ h2 {font-family: Georgia, serif;}
     </div>
 </div></div></div>
 
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
 
 </body>
 </html>
