update about page

--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -189,14 +189,15 @@ h2 {font-family: Georgia, serif;}
 <br>
 
 <div class="footer">
-<h3>HAUTE HOUSE STUDIO</h3>
+  <h3 style="font-family: Georgia, serif;">
+HAUTE HOUSE STUDIO</h3>
   <div class="row">
-    <div class="column">
+    <div class="column" style="font-family: Georgia, serif;">
         <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
         <br> Hours by appointment
     </div>
-    <div class="column">
+    <div class="column" style="font-family: Georgia, serif;">
         5500 Lincoln Drive
         <br>Suite 150
         <br>Edina, MN 55436
