--- a/1-1_team.html
+++ b/1-1_team.html
@@ -1,12 +1,86 @@
+
 <!doctype html>
 <head>
   <title>OUR TEAM - HAUTE HOLIDAYS</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <body>
+  <div
+    id="navbar"
+    class="topnav">
+      <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+        <div class="topnav-right">
+      <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
+      <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
+      <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
+      <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+      <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
+        </div>
+  </div>
+
+  <style>
+  body, html {
+    height: 100%;
+    margin: 0;
+  }
+
+  h1 {font-family: Georgia, serif;}
+  h2 {font-family: Georgia, serif;}
+
+  .hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
+    height: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: rgba(0,0,0, 0.3);
+    padding: 50px 50px;
+  }
+  </style>
+
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
+      <h2 style="font-family: Arial, Helvetica, sans-serif;">by
+          <br>Haute House Studio</h2>
+    </div>
+  </div>
 
   team history values
+
+  <br>
+  <br>
+  <br>
+
+  <div class="footer">
+    <h3 style="font-family: Georgia, serif;">
+  HAUTE HOUSE STUDIO</h3>
+    <div class="row">
+      <div class="column" style="font-family: Georgia, serif;">
+          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+          <br>(612) 730-1143
+          <br> Hours by appointment
+      </div>
+      <div class="column" style="font-family: Georgia, serif;">
+          5500 Lincoln Drive
+          <br>Suite 150
+          <br>Edina, MN 55436
+      </div>
+  </div></div>
+
+
 </body>
 </html>
