headers and footers; index page

--- a/1-1_team.html
+++ b/1-1_team.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <head>
-  <title>OUR TEAM - HAUTE HOLIDAYS</title>
+  <title>ABOUT US - HAUTE HOLIDAYS</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -31,7 +31,7 @@
   h2 {font-family: Georgia, serif;}
 
   .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("colorwreath.jpg");
     height: 70%;
     background-position: center;
     background-repeat: no-repeat;
@@ -53,14 +53,20 @@
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
-      <h2 style="font-family: Arial, Helvetica, sans-serif;">by
-          <br>Haute House Studio</h2>
+      <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>ABOUT US</strong></h1>
     </div>
   </div>
+<br>
+<br>
+<div class="w3-container">
+<class="pages">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
+We are known for our energy, enthusiasm, creativity, and attention to detail. We connect with our
+clients on a personal level, understand your vision, and then bring that vision to life in an amazing
+and memorable way.
 
-  team history values
-
+<br>Meet the fantastically talented team behind our WOW-worthy floral and events...
+<br><a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a>
+</div>
   <br>
   <br>
   <br>
