--- a/2_market.html
+++ b/2_market.html
@@ -2,9 +2,59 @@
 <head>
   <title>HOLIDAY MARKET - HAUTE HOLIDAYS</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-<body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <body>
+    <div
+      id="navbar"
+      class="topnav">
+        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+          <div class="topnav-right">
+        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+        <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
+          </div>
+    </div>
+
+    <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+
+    h1 {font-family: Georgia, serif;}
+    h2 {font-family: Georgia, serif;}
+
+    .hero-image {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("sharingpresents.jpg");
+      height: 70%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+
+    .hero-text {
+      text-align: center;
+      position: absolute;
+      top: 55%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      background-color: rgba(0,0,0, 0.3);
+      padding: 50px 50px;
+    }
+    </style>
+
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HOLIDAY MARKET &amp; IDEAS HOUSE</strong></h1>
+      </div>
+    </div>
+  <br>
 </body>
 </html>
