--- a/index.html
+++ b/index.html
@@ -3,102 +3,207 @@
 <head>
   <title>HAUTE HOLIDAYS by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
 <div
   id="navbar"
   class="topnav">
-    <a class="active" href="#home">LOGO</a>
+    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
       <div class="topnav-right">
-    <a href="#about">ABOUT</a>
-    <a href="#market">HOLIDAY MARKET</a>
-    <a href="#privateevents">PRIVATE EVENTS</a>
-    <a href="#workshops">WORKSHOPS</a>
-    <a href="#freshdecor">FRESH DECOR</a>
-    <a href="#subscribe">SUBSCRIPTION BOXES</a>
-    <a href="#contact">CONTACT</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+    <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
       </div>
+</div>
+
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+h1 {font-family: Georgia, serif;}
+h2 {font-family: Georgia, serif;}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
+  height: 70%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color: rgba(0,0,0, 0.3);
+  padding: 50px 50px;
+}
+</style>
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
+    <h2 style="font-family: Arial, Helvetica, sans-serif;">by
+        <br>Haute House Studio</h2>
+  </div>
+</div>
+
+<div>
+<h1> inspire. celebrate. create.
+</div>
+
+<br>
+
+  <div class="w3-container">
+    <h2>ABOUT</h2>
+      <div class="leftcolumn">
+        <p>Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
+        a floral, design, and event planning boutique in Edina, MN.</p>
+        <p>Learn more about us and see what we can do below.</p>
+        <br>
+      </div>
+
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">TEAM / VALUES / HISTORY</a>
+        <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
+      <br>
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="imgcolumn">
+        <img src="sequins2.jpg" alt="sequins" style="width:100%">
+      </div>
+      <div class="imgcolumn">
+        <img src="joy.jpg" alt="joy decoration" style="width:100%">
+      </div>
+      <div class="imgcolumn">
+        <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
+      </div>
+    </div>
+
+<br>
+<br>
+
+  <div class="w3-container">
+    <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
+
+       <div class="leftcolumn"><h3>Local gifts made with love for those you love.</h3>
+          <p>In-studio and online throughout December.</p>
+      </div>
+
+      <div class="rightcolumn">
+        <br>
+        <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
+      </div>
+    </div>
+
+<br>
+<br>
+
+<div class="row">
+  <div class="imgcolumn">
+    <img src="blackcandle.jpg" alt="black candle" style="width:100%">
+  </div>
+  <div class="imgcolumn">
+    <img src="hotred.jpg" alt="holdingpresents" style="width:100%">
+  </div>
+  <div class="imgcolumn">
+    <img src="ideashouse.jpg" alt="blankets and pinecones" style="width:100%">
+  </div>
+</div>
+</div>
+
+<br>
+<br>
+
+  <div class="w3-container">
+    <h2>PRIVATE EVENTS</h2>
+      <h3>Event Planning, Event Design &amp; Team-building Workshops</h3>
+        <div class="leftcolumn">
+          <p>Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.</p>
+          <p>Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.</p>
+        </div>
+
+        <div class="rightcolumn">
+          <br>
+          <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
+        </div>
   </div>
 
-<h1 style="color:#137347">Haute Holidays</h1>
+  <div class="row">
+    <div class="imgcolumn">
+      <img src="whiteplates.jpg" alt="dining event" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="eventdark.jpg" alt="classy event" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="grazetray.jpg" alt="graze tray" style="width:100%">
+    </div>
+  </div>
+  </div>
 
-<div id="home">
-  LOGO
+<br>
+<br>
 
-</div>
+  <div class="w3-container">
+    <h2>FRESH DECOR</h2>
+      <div class="leftcolumn">
+        <p>Centerpieces, mantels, tree decor, and more curated specially for your space.
+        Or, spread the cheer and show gratitude to someone you love.</p>
 
-<div id="about">
-  <h2>ABOUT</h2>
-      Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
-      a floral, design, and event planning boutique in Edina, MN. Learn more about us and see what
-      we can do below.
+      </div>
 
-TEAM / VALUES &amp; HISTORY / HOME SITE
+      <div class="rightcolumn">
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
+    </div>
+  </div>
 
-</div>
+  <div class="row">
+    <div class="imgcolumn">
+      <img src="candlepine.jpg" alt="christmas candles" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="freshdecor.png" alt="christmas tree" style="width:100%">
+    </div>
+    <div class="imgcolumn">
+      <img src="wreath.jpg" alt="pine wreath" style="width:100%">
+    </div>
+  </div>
+  </div>
 
-<div id="market">
-  <h2>HOLIDAY MARKET</h2>
-      Local gifts made with love
-      for those you love.
+<br>
+<br>
+<br>
 
-LEARN MORE
+<div class="footer">
+  <h3 style="font-family: Georgia, serif;">
+HAUTE HOUSE STUDIO</h3>
+  <div class="row">
+    <div class="column" style="font-family: Georgia, serif;">
+        <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+        <br>(612) 730-1143
+        <br> Hours by appointment
+    </div>
+    <div class="column" style="font-family: Georgia, serif;">
+        5500 Lincoln Drive
+        <br>Suite 150
+        <br>Edina, MN 55436
+    </div>
+</div></div></div>
 
-</div>
-
-<div id="privateevents">
-  <h2>PRIVATE EVENTS</h2>
-  <h3>Event Planning &amp; Event Design</h3>
-        Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.
-        Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.
-
-EVENTS
-
-</div>
-
-<div id="workshops">
-  <h2>WORKSHOPS</h2>
-      Bring out your creative side in weekly workshops led by our nationally-recognized designers.
-      Learn floral design and upkeep, entertaining tips, and more.
-      Share the joy and an invite a friend!
-
- WORKSHOPS / REGISTER
-
-</div>
-
-<div id="freshdecor">
-  <h2>FRESH DECOR</h2>
-      Centerpieces, mantels, and tree decor curated specially for your space.
-      Or, spread the cheer and show gratitude to someone you love.
-
-ORDER
-
-</div>
-
-<div id="subscribe">
-  <h2>SUBSCRIPTION BOXES</h2>
-      Keep your home full of warm cinnamon and evergreen scents all season long.
-
-SUBSCRIPTION PLANS
-<button onclick="https://6_subscribe.html">SUBSCRIPTION PLANS</button>
-
-</div>
-
-<div id="contact">
-  <h2>CONTACT</h2>
-        Haute House Studio
-    <br>5500 Lincoln Drive
-    <br>Suite 150
-    <br>Edina, MN 55436
-    <br>
-    <br>< a href="mailto:hello@hautehousestudio.com"> hello@hautehousestudio.com </a>
-    <br>
-    <br>(612) 730-1143
-</div>
 
 </body>
 </html>
