updated hero images

--- a/5_order.html
+++ b/5_order.html
@@ -30,7 +30,7 @@
     h2 {font-family: Georgia, serif;}
 
     .hero-image {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("sharingpresents.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("freshdecor.jpg");
       height: 70%;
       background-position: center;
       background-repeat: no-repeat;
@@ -57,7 +57,7 @@
     </div>
   <br>
 
-  
+
 <br>
 <br>
 <br>
