--- a/2_market.html
+++ b/2_market.html
@@ -56,5 +56,25 @@
       </div>
     </div>
   <br>
+
+<br>
+<br>
+<br>
+  <div class="footer">
+    <h3 style="font-family: Georgia, serif;">
+  HAUTE HOUSE STUDIO</h3>
+    <div class="row">
+      <div class="column" style="font-family: Georgia, serif;">
+          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+          <br>(612) 730-1143
+          <br> Hours by appointment
+      </div>
+      <div class="column" style="font-family: Georgia, serif;">
+          5500 Lincoln Drive
+          <br>Suite 150
+          <br>Edina, MN 55436
+      </div>
+  </div></div>
+
 </body>
 </html>
