finished decor page

--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -99,7 +99,7 @@ h2 {font-family: Georgia, serif;}
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
 
-       <div class="leftcolumn"><h3>Local gifts made with love for those you love.</h3>
+       <div class="leftcolumn"><h3>Local gifts made with love to celebrate those you love.</h3>
           <p>In-studio and online throughout December.</p>
       </div>
 
