--- a/1-1_team.html
+++ b/1-1_team.html
@@ -59,13 +59,13 @@
 <br>
 <br>
 <div class="w3-container">
-<class="pages">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
+<p class="padding">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
 We are known for our energy, enthusiasm, creativity, and attention to detail. We connect with our
 clients on a personal level, understand your vision, and then bring that vision to life in an amazing
-and memorable way.
+and memorable way.</p>
 
-<br>Meet the fantastically talented team behind our WOW-worthy floral and events...
-<br><a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a>
+<p class="padding">Meet the fantastically talented team behind our WOW-worthy floral and events...
+<br><a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a></p>
 </div>
   <br>
   <br>
