--- a/5_order.html
+++ b/5_order.html
@@ -30,7 +30,7 @@
     h2 {font-family: Georgia, serif;}
 
     .hero-image {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("freshdecor.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("freshdecor.png");
       height: 70%;
       background-position: center;
       background-repeat: no-repeat;
@@ -56,10 +56,44 @@
       </div>
     </div>
   <br>
+<div class="w3-container">
+  <h1>Haute House Studio is renown for our
+    <br>inspired and luxurious holiday design and decorating services.</h2>
+
+  <p class="padding">Designers Marsha Hunt and Bridget Connell have been featured nationally on NBC Nightly News and in
+  numerous regional media outlets such as KARE 11 TV, Edina Magazine, Midwest Home, Mpls-St. Paul Magazine,
+  Southwest Metro Magazine and the Minneapolis Star Tribune.</p>
+
+  <p class="padding">We use to-the-trade sources of luxury ornaments, holiday accents, lush embroidered ribbons,
+  and authentic greenery to create an opulent splendor for the holidays that will elevate your
+  holiday decor to match that of your elegant home interior. Experience how beautiful and effortless
+  the season can be.</p>
+
+  <div class="leftcolumn">
+    <p>Learn more about our holiday design and decoration work.</p><br>
+  </div>
+  <div class="rightcolumn">
+  <a href="https://www.hautehousestudio.com/holiday" class="button">HOLIDAY SERVICES</a><br>
+  </div>
+
+<div class="leftcolumn">
+  <p>See what else you can order to let someone know you're thinking of them.</p><br>
+</div>
+<div class="rightcolumn">
+ <a href="https://www.hautehousestudio.com/orders" class="button">SEE MORE</a>
+
+</div>
 
 
-<br>
-<br>
+<div class="row">
+  <div class="column">
+    <img src="bigtree.png" alt="upside down christmas tree" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
+  </div>
+</div>
+
 <br>
   <div class="footer">
     <h3 style="font-family: Georgia, serif;">
